--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.24)
-project(raytracing)
+project(minirender)
 
 set(CMAKE_CXX_STANDARD 17)
 
 
 include_directories(${CMAKE_SOURCE_DIR}/includes)
 
-add_executable(raytracing main.cpp)
+add_executable(minirender main.cpp)
 
 find_package(assimp REQUIRED)
-target_link_libraries(raytracing assimp::assimp)
+target_link_libraries(minirender assimp::assimp)
